# sme-tour

./: .env.local.example  .envrc  .envrc.local.example  .gitignore  .mcp.json  CLAUDE.md  README.md
.github/workflows/: engine-build.yml
data/processed/: cost_matrix_2026-06-01.csv  duration_matrix_2026-06-01.csv  flights_2026-06-01.csv
docs/superpowers/plans/: 2026-04-09-sme-tour-web-mvp-a.md  2026-05-09-engine-y-variable-ortools.md  2026-05-14-destination-picker.md
engine/: .dockerignore  Dockerfile  README.md  pyproject.toml
engine/collectors/: collect_flights.py
engine/data/processed/: Airplane dataset.csv  city dataset.csv
engine/src/: __init__.py  data_loader.py  graph.py  main.py  models.py
engine/src/solvers/: __init__.py  _shared.py  base.py  gurobi.py  ortools.py
engine/tests/: test_api.py  test_data_loader.py  test_graph.py  test_models.py  test_solvers_base.py  test_solvers_contract.py  test_solvers_gurobi.py  test_solvers_ortools.py
engine/tests/fixtures/: mini_air.csv  mini_city.csv
frontend/: DESIGN.md  package.json  pnpm-lock.yaml
frontend/app/: fonts.ts  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/result/: error.tsx  loading.tsx  page.tsx
frontend/hooks/: use-optimize.ts
frontend/lib/: api.ts  cities.ts  design-tokens.ts  format.ts  hubs.ts  node-label.ts  schemas.ts
infra/vercel/: README.md  main.tf  variables.tf  versions.tf
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
k8s/gurobi-credentials/: sealed-secret.yaml
scripts/: airports.py  collect_flights.py
(+28 files in other folders)
