[project]
name = "sme-tour-engine"
version = "0.1.0"
description = "SME Tour 유럽 여행 경로 최적화 엔진 (Clustered TSP + Gurobi)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "SME투어 종설 5조" },
]

dependencies = [
  "fastapi>=0.118",
  "uvicorn[standard]>=0.37",
  "pydantic>=2.9",
  "networkx>=3.4",
  "pandas>=2.2",
  "prometheus-client>=0.21",
  "python-multipart>=0.0.17",
  "ortools>=9.11",
]

[project.optional-dependencies]
gurobi = [
  "gurobipy>=12.0",
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.28",
  "ruff>=0.8",
  "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "RUF"]
ignore = ["E501"]  # line too long — handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
